--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  # SQFlite & Path
+  # SQFlite & Path & collection
   sqflite: ^2.4.2
   path: ^1.9.1
   collection: ^1.19.1
+  # goRoute
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_test:
