--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   collection: ^1.19.1
   # goRoute
   go_router: ^17.0.0
+  # Getx
+  get: ^4.7.3
 
 dev_dependencies:
   flutter_test:
